Fixed " the link text when there is a white space shows up %20 in the text box in the link popup and an empty list item in the wysiwyg editor breaks when saving and reediting"
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk/web@1526 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/tiny_mce_2/themes/wikieditor/css/editor_popup.css
+++ b/xwiki-platform-web/standard/src/main/webapp/tiny_mce_2/themes/wikieditor/css/editor_popup.css
@@ -256,7 +256,7 @@ legend {
 }
 
 .innertabs a:link, .tabs a:visited, .tabs a:hover {
-	color: black;
+	color: #6666cc;
 }
 
 .innertabs a:hover {
